fix the some alignment issue on card list

--- a/app/assets/stylesheets/cards.scss
+++ b/app/assets/stylesheets/cards.scss
@@ -63,13 +63,13 @@
     .divider {
       width: 100%;
       border-top: 1px solid #C8C8C8;
-      margin: 10px 0;
+      margin: 12px 0;
 
     }
 
     .offset {
       position: relative;
-      top: -75px;
+      top: -85px;
     }
     .review {
       color: black;
